@@ -1,8 +1,12 @@
 1.9.6.dev0
- * #959: Fix an error in the Btrfs hook when a "/" subvolume is configured in borgmatic's source
-   directories.
+ * #959: Fix an error in the Btrfs hook when a subvolume mounted at "/" is configured in borgmatic's
+   source directories.
  * #960: Fix for archives storing relative source directory paths such that they contain the working
    directory.
+ * #960: Fix the "spot" check to support relative source directory paths.
+ * Fix the "spot" check to no longer consider pipe files within an archive for file comparisons.
+ * Fix auto-excluding of special files (when databases are configured) to support relative source
+   directory paths.
  * Drop support for Python 3.8, which has been end-of-lifed.
 
 1.9.5
